# scale_morphology

./: .gitignore  LICENSE  README.md  config.yml  handover_plan.txt  pyproject.toml
.github/workflows/: readme_plots.yml  test.yml
data/: README.md
docs/: how_to_clean_segs.md
paper/: A_appendix_efa_area.tex  build.sh  manuscript.tex  references.bib
paper/appendices/: A_appendix_efa_area.tex  references.bib
paper/appendices/toy_notebooks/: blob_efa.ipynb  mnist_efa.ipynb
scripts/: 1-automatic_segmentation.py  2-clean_segmentations.py  3-quick_ellipse_analysis.py  4-elliptic_fourier_analysis.py
src/: README.md
src/efa/: README.md  simple_efa_analysis.ipynb  verbose_efa_analysis.ipynb
src/notebooks/: carran_analysis.ipynb  metrics_investigations.ipynb  rabia_analysis.ipynb  segmentation.ipynb
src/notebooks/carran_analysis/: 1-shape_analysis.ipynb  1-shape_analysis2.ipynb  3-metadata.ipynb  4-show_scales.ipynb  create_segmentation_tifs.ipynb  shape_analysis.ipynb
src/scale_morphology/: __init__.py
src/scale_morphology/scales/: dashboard.py  dim_reduction.py  efa.py  errors.py  metadata.py  plotting.py  processing.py  read.py  segmentation.py  util.py
src/scale_morphology/scripts/: autoencoder.py  dashboard.py  efa.py  scratch.py  vae.py
src/scale_morphology/scripts/plotting/: README.md  efa_edges.py  interpret_dimensions.py
src/scale_morphology/test/: example_workflow.py  test_dim_reduction.py  test_efd.py  test_metadata.py  test_processing.py
src/segmentation/: README.md  clean_segmentations.py  config.yaml  segment_confocal.ipynb  segmentation.ipynb
