[project]
name = "scale_morphology"
version = "0.1.0"
description = "Zebrafish scale shape analysis"
readme = "README.md"
authors = [
    { name = "Richard Lane", email = "richard.lane@bristol.ac.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "plotly>=6.0.0",
    "pyefd>=1.6.0",
    "ruff>=0.9.5",
    "scikit-image>=0.25.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[tool.hatch.envs.default]
dev-mode = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scale_analysis"]
