[project]
name = "scale-morphology"
version = "0.1.0"
description = "Zebrafish scale shape analysis"
readme = "README.md"
authors = [
    { name = "Richard Lane", email = "richard.lane@bristol.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "plotly>=6.0.0",
    "pyefd>=1.6.0",
    "pyyaml>=6.0.2",
    "ruff>=0.9.5",
    "scikit-image>=0.25.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "pytest>=8.0.0",
    "imageio>=2.37.0",
    "shapely>=2.0.7",
]

[tool.pytest.ini_options]
testpaths = ["src/scale_morphology/test"]

[project.scripts]
efa = "scale_morphology.scripts.efa:cli"
autoencoder = "scale_morphology.scripts.autoencoder:main"
vae = "scale_morphology.scripts.vae:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
