[project]
name = "scale-morphology"
version = "0.1.0"
description = "Zebrafish scale shape analysis"
readme = "README.md"
authors = [
    { name = "Richard Lane", email = "richard.lane@bristol.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "plotly>=6.0.0",
    "pyefd>=1.6.0",
    "pyyaml>=6.0.2",
    "ruff>=0.9.5",
    "scikit-image>=0.25.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "pytest>=8.0.0",
    "imageio>=2.37.0",
    "shapely>=2.0.7",
    "black>=25.1.0",
    "bokeh>=3.7.0",
    "pandas>=2.2.3",
    "ipykernel>=6.30.1",
    "readlif>=0.6.6",
    "ipywidgets>=8.1.7",
    "liffile>=2025.5.10",
    "napari[pyqt5]>=0.6.4",
    "pyqt5>=5.15.11",
    "nbdime>=4.0.2",
    "segment-anything>=1.0",
    "opencv-python>=4.12.0.88",
    "seaborn>=0.13.2",
    "tifffile==2025.12.20",
    "statsmodels>=0.14.6",
    "pingouin>=0.5.5",
    "imagecodecs>=2026.1.14",
]

[tool.pytest.ini_options]
testpaths = ["src/scale_morphology/test"]

[project.scripts]
efa = "scale_morphology.scripts.efa:cli"
autoencoder = "scale_morphology.scripts.autoencoder:main"
vae = "scale_morphology.scripts.vae:main"
dashboard = "scale_morphology.scripts.dashboard:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = [
  "sys_platform == 'win32'",
  "sys_platform == 'linux'",
  "sys_platform == 'darwin'"
]
